--- a/wp-content/themes/knipper/src/scss/responsive/responsive.scss
+++ b/wp-content/themes/knipper/src/scss/responsive/responsive.scss
@@ -743,21 +743,6 @@
             -ms-flex-pack: end !important;
                 justify-content: flex-end !important;
     }
-    .partner-logo1  {
-        width: 43px !important;
-    }
-    .partner-logo2  {
-        width: 54px !important;
-    }
-    .partner-logo3  {
-        width: 75px !important;
-    }
-    .partner-logo4 {
-        width: 61px !important;
-    }
-    .partner-logo5 {
-        width: 40px !important;
-    }
     .row-tricol-footer {
         width: 100% !important;
         padding-left: 40px;
@@ -795,15 +780,6 @@
     .diamond-red-text {
         text-align: left !important;
         font-size: 20px !important;
-    }
-    .partner-logo1,
-    .partner-logo2,
-    .partner-logo4,
-    .partner-logo5 {
-        width: 44px;
-    }
-    .partner-logo3 {
-        width: 60px;
     }
     div.icon-row-copy div.et_pb_text_inner a,
     div.icon-row-copy div.et_pb_text_inner p {
